Add OpenStreetMap via leaflet

--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,3 +1,36 @@
 {
-    "title": "Bonjour le monde :D"
+    "title": "Bonjour le monde :D",
+    "patologies": [
+        {
+            "title": "Bonjour je suis une patologie 1",
+            "content": "Bonjour je suis le content de la patolgie"
+        },{
+            "title": "Bonjour je suis une patologie 2",
+            "content": "Bonjour je suis le content de la patolgie"
+        },{
+            "title": "Bonjour je suis une patologie 3",
+            "content": "Bonjour je suis le content de la patolgie"
+        },{
+            "title": "Bonjour je suis une patologie 4",
+            "content": "Bonjour je suis le content de la patolgie"
+        }
+    ],
+    "questions": [
+        {
+            "question": "Bonjour je suis la première question",
+            "content": "Bonjour je suis la réponse à cette question"
+        },{
+            "question": "Bonjour je suis la première question",
+            "content": "Bonjour je suis la réponse à cette question"
+        },{
+            "question": "Bonjour je suis la première question",
+            "content": "Bonjour je suis la réponse à cette question"
+        },{
+            "question": "Bonjour je suis la première question",
+            "content": "Bonjour je suis la réponse à cette question"
+        },{
+            "question": "Bonjour je suis la première question",
+            "content": "Bonjour je suis la réponse à cette question"
+        }
+    ]
 }
