Add custom marker to the map component, try to implement multi language by folder language for each page

--- a/src/assets/i18n/home/fr.json
+++ b/src/assets/i18n/home/fr.json
@@ -1,5 +1,5 @@
 {
-    "title": "Bonjour à tous",
+    "title": "Bonjour depuis le folder home",
     "patologies": [
         {
             "title": "Bonjour je suis une patologie 1",
